Switch to Google App Engine.
Lift's magical ajax isn't magical enough to make up for writing
Javascript in a scala pidgin, scala itself has way too much syntax and
magic going on for me to feel comfortable with it, and JPA is pretty
painful in it.  Bleh.

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Tic is little time tracking webapp for obsessive compulsives written with lift.
+Tic is little time tracking webapp for obsessive compulsives written with 
+Google App Engine.
